--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -34,6 +34,7 @@
                 <option value="Content Writer">
                 <option value="Business Analyst">
                 <option value="Customer Support Executive"></option>
+                <option value="Android Developer"></option>
 
             </datalist>
         </div>
